added links to email addresses

--- a/templates/student_info.html
+++ b/templates/student_info.html
@@ -14,8 +14,8 @@
     <h3>{{ sid }} - {{ name }}</h3>
     <ul>
         <li>Qtrs Used: {{ qtrs_used }}</li>
-        <li>UW Email: {{ uw_email }}</li>
-        <li>Alt. Email: {{ other_email }}</li>
+        <li><a href="#">UW Email: {{ uw_email }}</a></li>
+        <li><a href="#">Alt. Email: {{ other_email }}</a></li>
         <li>Campus: {{ campus }}</li>
         <li>Major Dept.: {{ major }}</li>
         <li>Degree {{ degree }}</li>
