Added bold class to li tag to allow for list headings to be bold

--- a/static/styles.css
+++ b/static/styles.css
@@ -2,6 +2,19 @@ h1 {
     color: rgb(15, 6, 102)
 }
 
+h2 {
+    color: black
+}
+
 h3 {
     color: black
+}
+
+body {
+    background-color: darkgrey;
+
+}
+
+li.listHeader {
+    font-weight: bold
 }
