Updated href for Find Student by SID to link to student_info.html

--- a/templates/index.html
+++ b/templates/index.html
@@ -6,21 +6,21 @@
 <body>
     <h2>Menu</h2>
     <ul>
-        <li>Student Information</li>
+        <li class="listHeader">Student Information</li>
         <ul>
-            <li><a href="#">Find Student by SID</a></li>
+            <li><a href="/student_info/">Find Student by SID</a></li>
             <li><a href="#">Find Student by Email</a></li>
             <li><a href="#">List Currently Registered EE Undergrads</a></li>
             <li><a href="#">Placeholder</a></li>
         </ul>
-        <li>Faculty Information</li>
+        <li class="listHeader">Faculty Information</li>
         <ul>
             <li><a href="#">Faculty List</a></li>
             <li><a href="#">Find Faculy Code by netID & Year-Qtr</a></li>
             <li><a href="#">Placeholder</a></li>
             <li><a href="#">Placeholder</a></li>
         </ul>
-        <li>Course Information</li>
+        <li class="listHeader">Course Information</li>
         <ul>
             <li><a href="#">Current Time Schedule</a></li>
             <li><a href="#">Course History</a></li>
