--- a/templates/student_info.html
+++ b/templates/student_info.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-    <title>Item Details</title>
+    <title>Student Info</title>
     <link href={{ url_for("static", path='/styles.css') }} rel='stylesheet'>
 </head>
 <body>
