--- a/templates/index.html
+++ b/templates/index.html
@@ -23,7 +23,7 @@
         <li class="listHeader">Course Information</li>
         <ul>
             <li><a href="#">Current Time Schedule</a></li>
-            <li><a href="#">Course History</a></li>
+            <li><a href="/course_history">Course History</a></li>
             <li><a href="#">Joint Courses Information</a></li>
             <li><a href="#">Placeholder</a></li>
         </ul>
