added headers to table

--- a/templates/course_info.html
+++ b/templates/course_info.html
@@ -21,6 +21,28 @@
     <div>
     <h3>Course History</h3>
     <table>
+        <tr>
+            <th>Year</th>
+            <th>Qtr</th>
+            <th>Dept</th>
+            <th>No.</th>
+            <th>Type</th>
+            <th>Sect.</th>
+            <th>#</th>
+            <th>Days</th>
+            <th>Bldg.</th>
+            <th>Room</th>
+            <th>Start</th>
+            <th>End</th>
+            <th>Enrolled</th>
+            <th>Limit</th>
+            <th>Denied</th>
+            <th>Added</th>
+            <th>Dropped</th>
+            <th>Instr.</th>
+            <th>Title</th>
+            <th>Comment</th>
+        </tr>
     {% for row in course_data %}
         <tr>
         {% for data in row %}
