--- a/templates/course_info.html
+++ b/templates/course_info.html
@@ -1,26 +1,30 @@
 <html>
 <head>
     <title>Course Info</title>
-    <link href={{ url_for("static", path='/styles.css') }} rel='stylesheet'>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
 </head>
 <body>
+    <div class="container">
+        <p><a href="/">Menu</a></p>
+    </div>
     <div>
         <form>
-            <label for="dept">Dept Abbr.</label>
-            <input type="text" id="dept" name="dept" value='E E'><br><br>
-            <label for="number">Course No.</label>
-            <input type="text" id="number" name="number" autofocus><br><br>
-            <label for="start">Start Year</label>
-            <input type="text" id="start" name="start" value=2016><br><br>
-            <label for="end">End Year</label>
-            <input type="text" id="end" name="end" value=2021><br>
-
-            <p><input type="submit"></p>
+            <div class="form-group">
+                <label for="dept">Dept Abbr.</label>
+                <input type="text" id="dept" name="dept" value='E E'><br><br>
+                <label for="number">Course No.</label>
+                <input type="text" id="number" name="number" autofocus><br><br>
+                <label for="start">Start Year</label>
+                <input type="text" id="start" name="start" value=2016><br><br>
+                <label for="end">End Year</label>
+                <input type="text" id="end" name="end" value=2021><br>
+                <p><input type="submit"></p>
+            </div>
         </form>
     </div>
     <div>
     <h3>Course History</h3>
-    <table>
+    <table class="table">
         <tr>
             <th>Year</th>
             <th>Qtr</th>
