Added ability to use student no., uw email or alternate email to get student info by parsing search field.

--- a/templates/student_info.html
+++ b/templates/student_info.html
@@ -6,7 +6,7 @@
 <body>
     <div>
         <form>
-            <label for="sid">Student No.</label><br>
+            <label for="sid">Student No. or Either Email</label><br>
             <input type="text" id="sid" name="sid" autofocus>
             <p><input type="submit"></p>
         </form>
