--- a/templates/student_info.html
+++ b/templates/student_info.html
@@ -22,5 +22,8 @@
         <li>Degree Status: {{ degree_status }}</li>
         <li>Degree Earned: {{ degree_earnrd }}</li>
     </ul>
+    <p></p>
+    <p></p>
+    <p><a href="/">Home</a></p>
 </body>
 </html>
