--- a/templates/course_info.html
+++ b/templates/course_info.html
@@ -4,58 +4,59 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
 </head>
 <body>
-    <div class="container">
-        <p><a href="/">Menu</a></p>
-    </div>
-    <div>
-        <form>
-            <div class="form-group">
-                <label for="dept">Dept Abbr.</label>
-                <input type="text" id="dept" name="dept" value='E E'><br><br>
-                <label for="number">Course No.</label>
-                <input type="text" id="number" name="number" autofocus><br><br>
-                <label for="start">Start Year</label>
-                <input type="text" id="start" name="start" value=2016><br><br>
-                <label for="end">End Year</label>
-                <input type="text" id="end" name="end" value=2021><br>
-                <p><input type="submit"></p>
-            </div>
-        </form>
-    </div>
-    <div>
-    <h3>Course History</h3>
-    <table class="table">
-        <tr>
-            <th>Year</th>
-            <th>Qtr</th>
-            <th>Dept</th>
-            <th>No.</th>
-            <th>Type</th>
-            <th>Sect.</th>
-            <th>#</th>
-            <th>Days</th>
-            <th>Bldg.</th>
-            <th>Room</th>
-            <th>Start</th>
-            <th>End</th>
-            <th>Enrolled</th>
-            <th>Limit</th>
-            <th>Denied</th>
-            <th>Added</th>
-            <th>Dropped</th>
-            <th>Instr.</th>
-            <th>Title</th>
-            <th>Comment</th>
-        </tr>
-    {% for row in course_data %}
-        <tr>
-        {% for data in row %}
-            <td> {{ data }} </td>
-        {% endfor %}
-        </tr>
-    {% endfor %}
-    </table>
-
+    <div class="container-fluid">
+        <div>
+            <p><a href="/">Menu</a></p>
+        </div>
+        <div>
+            <form>
+                <div class="form-group">
+                    <label for="dept">Dept Abbr.</label>
+                    <input type="text" id="dept" name="dept" value='E E'><br><br>
+                    <label for="number">Course No.</label>
+                    <input type="text" id="number" name="number" autofocus><br><br>
+                    <label for="start">Start Year</label>
+                    <input type="text" id="start" name="start" value=2016><br><br>
+                    <label for="end">End Year</label>
+                    <input type="text" id="end" name="end" value=2021><br>
+                    <p><input type="submit"></p>
+                </div>
+            </form>
+        </div>
+        <div>
+            <h3>Course History</h3>
+            <table class="table">
+                <tr>
+                    <th>Year</th>
+                    <th>Qtr</th>
+                    <th>Dept</th>
+                    <th>No.</th>
+                    <th>Type</th>
+                    <th>Sect.</th>
+                    <th>#</th>
+                    <th>Days</th>
+                    <th>Bldg.</th>
+                    <th>Room</th>
+                    <th>Start</th>
+                    <th>End</th>
+                    <th>Enrolled</th>
+                    <th>Limit</th>
+                    <th>Denied</th>
+                    <th>Added</th>
+                    <th>Dropped</th>
+                    <th>Instr.</th>
+                    <th>Title</th>
+                    <th>Comment</th>
+                </tr>
+            {% for row in course_data %}
+                <tr>
+                {% for data in row %}
+                    <td> {{ data }} </td>
+                {% endfor %}
+                </tr>
+            {% endfor %}
+            </table>
+        </div>
     </div>
 </body>
 </html>
