Fixed typo in menu.

--- a/templates/index.html
+++ b/templates/index.html
@@ -16,7 +16,7 @@
         <li class="listHeader">Faculty Information</li>
         <ul>
             <li><a href="#">Faculty List</a></li>
-            <li><a href="#">Find Faculy Code by netID & Year-Qtr</a></li>
+            <li><a href="#">Find Faculty Code by netID & Year-Qtr</a></li>
             <li><a href="#">Placeholder</a></li>
             <li><a href="#">Placeholder</a></li>
         </ul>
