Removed menu items to search for student info by email and added or Email Address to the search by SID menu option.

--- a/templates/index.html
+++ b/templates/index.html
@@ -8,8 +8,7 @@
     <ul>
         <li class="listHeader">Student Information</li>
         <ul>
-            <li><a href="/student_info/">Find Student by SID</a></li>
-            <li><a href="#">Find Student by Email</a></li>
+            <li><a href="/student_info/">Find Student by SID or Email Address</a></li>
             <li><a href="#">List Currently Registered EE Undergrads</a></li>
             <li><a href="#">Placeholder</a></li>
         </ul>
