New search functionality added: Faculty Course History

--- a/templates/index.html
+++ b/templates/index.html
@@ -16,7 +16,7 @@
         <ul>
             <li><a href="#">Faculty List</a></li>
             <li><a href="#">Find Faculty Code by netID & Year-Qtr</a></li>
-            <li><a href="#">Placeholder</a></li>
+            <li><a href="fac_crs_history">Faculty Course History</a></li>
             <li><a href="#">Placeholder</a></li>
         </ul>
         <li class="listHeader">Course Information</li>
