added faculty_list functionality

--- a/templates/index.html
+++ b/templates/index.html
@@ -14,7 +14,7 @@
         </ul>
         <li class="listHeader">Faculty Information</li>
         <ul>
-            <li><a href="#">Faculty List</a></li>
+            <li><a href="/faculty_list/">Faculty List</a></li>
             <li><a href="/facutly_code/">Find Faculty Code by Faculty Name & Year-Qtr</a></li>
             <li><a href="fac_crs_history">Faculty Course History</a></li>
             <li><a href="#">Placeholder</a></li>
