added joint courses information functionality. Error in trying to display html: too many values to unpack.

--- a/templates/index.html
+++ b/templates/index.html
@@ -16,14 +16,14 @@
         <ul>
             <li><a href="/faculty_list/">Faculty List</a></li>
             <li><a href="/facutly_code/">Find Faculty Code by Faculty Name & Year-Qtr</a></li>
-            <li><a href="fac_crs_history">Faculty Course History</a></li>
+            <li><a href="fac_crs_history/">Faculty Course History</a></li>
             <li><a href="#">Placeholder</a></li>
         </ul>
         <li class="listHeader">Course Information</li>
         <ul>
             <li><a href="#">Current Time Schedule</a></li>
-            <li><a href="/course_history">Course History</a></li>
-            <li><a href="#">Joint Courses Information</a></li>
+            <li><a href="/course_history/">Course History</a></li>
+            <li><a href="/joint_courses.html/">Joint Courses Information</a></li>
             <li><a href="#">Placeholder</a></li>
         </ul>
     </ul>
