--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,7 @@
         <li class="listHeader">Student Information</li>
         <ul>
             <li><a href="/student_info/">Find Student by SID or Email Address</a></li>
-            <li><a href="#">List Currently Registered EE Undergrads</a></li>
+            <li><a href="/current_ee_undergrads.html/">List Currently Registered EE Undergrads</a></li>
             <li><a href="#">Placeholder</a></li>
         </ul>
         <li class="listHeader">Faculty Information</li>
