Modified tables to smaller padding, light borders on cells, darker header.

--- a/templates/current_ee_undergrads.html
+++ b/templates/current_ee_undergrads.html
@@ -10,8 +10,8 @@
         </div>
         <div>
             <h3>Student Info</h3>
-            <table class="table w-auto">
-                <thead>
+            <table class="table w-auto table-sm table-bordered">
+                <thead class="thead-light">
                     <tr>
                         <th>Student No.</th>
                         <th>Name</th>
