--- a/templates/joint_courses.html
+++ b/templates/joint_courses.html
@@ -9,9 +9,9 @@
             <p><a href="/">Menu</a></p>
         </div>
         <div>
-            <h3>Joint Course Info</h3>
-            <table class="table w-auto">
-                <thead>
+            <h5>Joint Course Info</h5>
+            <table class="table w-auto table-sm table-bordered">
+                <thead class="thead-light">
                     <tr>
                         <th>Dept.</th>
                         <th>Course #</th>
