--- a/templates/index.html
+++ b/templates/index.html
@@ -1,25 +1,26 @@
 <html>
 <head>
     <title>ECE Advisor Home</title>
-    <link href={{ url_for("static", path='/styles.css') }} rel='stylesheet'>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+
 </head>
 <body>
     <h2>Menu</h2>
     <ul>
-        <li class="listHeader">Student Information</li>
+        <li class="listHeader"><h6>Student Information</h6></li>
         <ul>
             <li><a href="/student_info/">Find Student by SID or Email Address</a></li>
             <li><a href="/current_ee_undergrads.html/">List Currently Registered EE Undergrads</a></li>
             <li><a href="#">Placeholder</a></li>
         </ul>
-        <li class="listHeader">Faculty Information</li>
+        <li class="listHeader"><h6>Faculty Information</h6></li>
         <ul>
             <li><a href="/faculty_list/">Faculty List</a></li>
             <li><a href="/facutly_code/">Find Faculty Code by Faculty Name & Year-Qtr</a></li>
             <li><a href="fac_crs_history/">Faculty Course History</a></li>
             <li><a href="#">Placeholder</a></li>
         </ul>
-        <li class="listHeader">Course Information</li>
+        <li class="listHeader"><h6>Course Information</h6></li>
         <ul>
             <li><a href="#">Current Time Schedule</a></li>
             <li><a href="/course_history/">Course History</a></li>
