--- a/templates/student_info.html
+++ b/templates/student_info.html
@@ -1,29 +1,33 @@
 <html>
 <head>
     <title>Student Info</title>
-    <link href={{ url_for("static", path='/styles.css') }} rel='stylesheet'>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
 </head>
 <body>
-    <div>
-        <form>
-            <label for="sid">Student No. or Either Email</label><br>
-            <input type="text" id="sid" name="sid" autofocus>
-            <p><input type="submit"></p>
-        </form>
+    <div class="container-fluid">
+        <div>
+            <form>
+                <label for="sid">Student No. or Either Email</label><br>
+                <input type="text" id="sid" name="sid" autofocus>
+                <p><input type="submit"></p>
+            </form>
+        </div>
+        <div>
+        <h3>{{ sid }} - {{ name }}</h3>
+        <ul>
+            <li>Qtrs Used: {{ qtrs_used }}</li>
+            <li>UW Email: <a href="#">{{ uw_email }}</a></li>
+            <li>Alt. Email: <a href="#">{{ other_email }}</a></li>
+            <li>Campus: {{ campus }}</li>
+            <li>Major Dept.: {{ major }}</li>
+            <li>Degree {{ degree }}</li>
+            <li>Degree Status: {{ degree_status }}</li>
+            <li>Degree Earned: {{ degree_earnrd }}</li>
+        </ul>
+        <p></p>
+        <p></p>
+        <p><a href="/">Home</a></p>
+        </div>
     </div>
-    <h3>{{ sid }} - {{ name }}</h3>
-    <ul>
-        <li>Qtrs Used: {{ qtrs_used }}</li>
-        <li>UW Email: <a href="#">{{ uw_email }}</a></li>
-        <li>Alt. Email: <a href="#">{{ other_email }}</a></li>
-        <li>Campus: {{ campus }}</li>
-        <li>Major Dept.: {{ major }}</li>
-        <li>Degree {{ degree }}</li>
-        <li>Degree Status: {{ degree_status }}</li>
-        <li>Degree Earned: {{ degree_earnrd }}</li>
-    </ul>
-    <p></p>
-    <p></p>
-    <p><a href="/">Home</a></p>
 </body>
 </html>
