Added container-fluid div around body.

--- a/templates/index.html
+++ b/templates/index.html
@@ -5,28 +5,30 @@
 
 </head>
 <body>
-    <h2>Menu</h2>
-    <ul>
-        <li class="listHeader"><h6>Student Information</h6></li>
+    <div class="container-fluid">
+        <h2>Menu</h2>
         <ul>
-            <li><a href="/student_info/">Find Student by SID or Email Address</a></li>
-            <li><a href="/current_ee_undergrads.html/">List Currently Registered EE Undergrads</a></li>
-            <li><a href="#">Placeholder</a></li>
+            <li class="listHeader"><h6>Student Information</h6></li>
+            <ul>
+                <li><a href="/student_info/">Find Student by SID or Email Address</a></li>
+                <li><a href="/current_ee_undergrads.html/">List Currently Registered EE Undergrads</a></li>
+                <li><a href="#">Placeholder</a></li>
+            </ul>
+            <li class="listHeader"><h6>Faculty Information</h6></li>
+            <ul>
+                <li><a href="/faculty_list/">Faculty List</a></li>
+                <li><a href="/facutly_code/">Find Faculty Code by Faculty Name & Year-Qtr</a></li>
+                <li><a href="fac_crs_history/">Faculty Course History</a></li>
+                <li><a href="#">Placeholder</a></li>
+            </ul>
+            <li class="listHeader"><h6>Course Information</h6></li>
+            <ul>
+                <li><a href="#">Current Time Schedule</a></li>
+                <li><a href="/course_history/">Course History</a></li>
+                <li><a href="/joint_courses.html/">Joint Courses Information</a></li>
+                <li><a href="#">Placeholder</a></li>
+            </ul>
         </ul>
-        <li class="listHeader"><h6>Faculty Information</h6></li>
-        <ul>
-            <li><a href="/faculty_list/">Faculty List</a></li>
-            <li><a href="/facutly_code/">Find Faculty Code by Faculty Name & Year-Qtr</a></li>
-            <li><a href="fac_crs_history/">Faculty Course History</a></li>
-            <li><a href="#">Placeholder</a></li>
-        </ul>
-        <li class="listHeader"><h6>Course Information</h6></li>
-        <ul>
-            <li><a href="#">Current Time Schedule</a></li>
-            <li><a href="/course_history/">Course History</a></li>
-            <li><a href="/joint_courses.html/">Joint Courses Information</a></li>
-            <li><a href="#">Placeholder</a></li>
-        </ul>
-    </ul>
+    </div>
 </body>
 </html>
