style changes to input and label

--- a/templates/student_info.html
+++ b/templates/student_info.html
@@ -7,9 +7,10 @@
     <div class="container-fluid">
         <div>
             <form>
-                <label for="sid">Student No. or Either Email</label><br>
+                <p></p>
+                <label for="sid"><h6>Student No. or Either Email</h6></label><br>
                 <input type="text" id="sid" name="sid" autofocus>
-                <p><input type="submit"></p>
+                <input type="submit">
             </form>
         </div>
         <div>
