undid changes adding cum_gpa as it was creating an error. Will recreate on different branch.

--- a/templates/student_info.html
+++ b/templates/student_info.html
@@ -16,6 +16,14 @@
                         <input type="submit">
                     </form>
                 </div>
+            </div>
+            <div class="col">
+            </div>
+            <div class="col">
+            </div>
+        </div>
+        <div class="row">   
+            <div class="col">
                 <div>
                 <h3>{{ sid }} - {{ name }}</h3>
                 <ul>
@@ -25,7 +33,6 @@
                     <li>Campus: {{ campus }}</li>
                     <li>Major Dept.: {{ major }}</li>
                     <li>Degree: {{ degree }}</li>
-                    <li>Cum GPA: {{ cum_gpa }}</li>
                     <li>Degree Status: {{ degree_status }}</li>
                     <li>Degree Earned: {{ degree_earnrd }}</li>
                 </ul>
