--- a/templates/course_history.html
+++ b/templates/course_history.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-    <title>Course Info</title>
+    <title>Course_History</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
 </head>
 <body>
@@ -15,6 +15,11 @@
                     <input type="text" id="dept" name="dept" value='E E'><br><br>
                     <label for="number">Course No.</label>
                     <input type="text" id="number" name="number" autofocus><br><br>
+                    <label for="start">Start Year</label>
+                    <input type="text" id="start" name="start" value=2016><br><br>
+                    <label for="end">End Year</label>
+                    <input type="text" id="end" name="end" value=2021><br>
+                    <p><input type="submit"></p>
                 </div>
             </form>
         </div>
