split logic off from connect.py to individual .py files based on subject: students, courses, & faculty.

--- a/templates/index.html
+++ b/templates/index.html
@@ -17,7 +17,7 @@
             <li class="listHeader"><h6>Faculty Information</h6></li>
             <ul>
                 <li><a href="/faculty_list/">Faculty List</a></li>
-                <li><a href="/facutly_code/">Find Faculty Code by Faculty Name & Year-Qtr</a></li>
+                <li><a href="/faculty_code/">Find Faculty Code by Faculty Name & Year-Qtr</a></li>
                 <li><a href="fac_crs_history/">Faculty Course History</a></li>
                 <li><a href="#">Placeholder</a></li>
             </ul>
