Beginning of single course information functionality.

--- a/templates/index.html
+++ b/templates/index.html
@@ -23,10 +23,10 @@
             </ul>
             <li class="listHeader"><h6>Course Information</h6></li>
             <ul>
+                <li><a href="/course_info/">Single Course Information</a></li>
                 <li><a href="#">Current Time Schedule</a></li>
                 <li><a href="/course_history/">Course History</a></li>
                 <li><a href="/joint_courses.html/">Joint Courses Information</a></li>
-                <li><a href="#">Placeholder</a></li>
             </ul>
         </ul>
     </div>
