--- a/templates/course_info.html
+++ b/templates/course_info.html
@@ -1,61 +1,44 @@
-<html>
-<head>
-    <title>Course Info</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-</head>
-<body>
+{% extends "base.html" %}
+{% block title %}Course Info{% endblock %}
+{% block body %}
     <div class="container-fluid">
-        <div>
-            <p><a href="/">Menu</a></p>
-        </div>
-        <div>
-            <form>
-                <div class="form-group">
-                    <label for="dept">Dept Abbr.</label>
-                    <input type="text" id="dept" name="dept" value='E E'><br><br>
-                    <label for="number">Course No.</label>
-                    <input type="text" id="number" name="number" autofocus><br><br>
+        <div class="row">
+            <div class="col">
+                <div>
+                    <form>
+                        <p></p>
+                        <label for="dept"><h6>Curriculum Abbrev: </h6></label><br>
+                        <input type="text" id="dept" name="dept" value='E E'><br><br>
+                        <label for="crs_number"><h6>Course No.: </h6></label><br>
+                        <input type="text" id="crs_number" name="crs_number" vaulue={{ crs_number }}autofocus><br><br>
+                        <p><input type="submit"></p>
+                    </form>
                 </div>
-            </form>
+            </div>
+            <div class="col">
+            </div>
+            <div class="col">
+            </div>
         </div>
-        <div>
-            <h3>Course History</h3>
-            <table class="table table-sm table-bordered table-striped">
-                <thead class="thead-light">
-                    <tr>
-                        <th>Year</th>
-                        <th>Qtr</th>
-                        <th>Dept</th>
-                        <th>No.</th>
-                        <th>Type</th>
-                        <th>Sect.</th>
-                        <th>#</th>
-                        <th>Days</th>
-                        <th>Bldg.</th>
-                        <th>Room</th>
-                        <th>Start</th>
-                        <th>End</th>
-                        <th>Enrolled</th>
-                        <th>Limit</th>
-                        <th>Denied</th>
-                        <th>Added</th>
-                        <th>Dropped</th>
-                        <th>Instr.</th>
-                        <th>Title</th>
-                        <th>Comment</th>
-                    </tr>
-                </thead>
-                <tbody?
-                {% for row in course_data %}
-                    <tr>
-                    {% for data in row %}
-                        <td> {{ data }} </td>
-                    {% endfor %}
-                    </tr>
-                {% endfor %}
-                </tbody>
-            </table>
-        </div>
+        <div class="row">   
+            <div class="col">
+                <div>
+                <h3>{{ dept }} - {{ crs_number }}</h3>
+                <ul>
+                    <li>Dept.: {{ dept }}</li>
+                    <li>Number: {{ crs_number }}</li>
+                </ul>
+                </div>
+            </div>
+            <div class="col">
+                <p></p>
+                <h4>Other Information</h4>
+            </div>
+            <div class="col">
+                <p></p>
+                <h4>More Information</h4>
+            </div>
+        </div>     
     </div>
 </body>
-</html>
+{% endblock %}
