added href mailto: to email addresses.

--- a/templates/student_info.html
+++ b/templates/student_info.html
@@ -24,8 +24,8 @@
                 <h3>{{ sid }} - {{ name }}</h3>
                 <ul>
                     <li>Qtrs Used: {{ qtrs_used }}</li>
-                    <li>UW Email: <a href="#">{{ uw_email }}</a></li>
-                    <li>Alt. Email: <a href="#">{{ other_email }}</a></li>
+                    <li>UW Email: <a href="mailto:{{ uw_email }}">{{ uw_email }}</a></li>
+                    <li>Alt. Email: <a href="mailto:{{ other_email }}">{{ other_email }}</a></li>
                     <li>Campus: {{ campus }}</li>
                     <li>Major Dept.: {{ major }}</li>
                     <li>Degree: {{ degree }}</li>
