--- a/templates/course_info.html
+++ b/templates/course_info.html
@@ -10,7 +10,7 @@
                         <label for="dept"><h6>Curriculum Abbrev: </h6></label><br>
                         <input type="text" id="dept" name="dept" value='E E'><br><br>
                         <label for="crs_number"><h6>Course No.: </h6></label><br>
-                        <input type="text" id="crs_number" name="crs_number" value={{ crs_number }} autofocus><br><br>
+                        <input type="text" id="crs_number" name="crs_number" value="{{ crs_number }}"" autofocus><br><br>
                         <p><input type="submit"></p>
                     </form>
                 </div>
