--- a/templates/index.html
+++ b/templates/index.html
@@ -27,6 +27,7 @@
                 <li><a href="#">Current Time Schedule</a></li>
                 <li><a href="/course_history/">Course History</a></li>
                 <li><a href="/joint_courses.html/">Joint Courses Information</a></li>
+                <li><a href="https://docs.google.com/spreadsheets/d/1dZSb9V977hEZJcDBGMMfYigskvfT-h7EOpa7lqlmkjg/edit?usp=sharing" target="_blank">Shared Controls Graduate Courses stylesheet</a></li>
             </ul>
         </ul>
     </div>
