Change text input default values for course_history form to fill with values from current search.

--- a/templates/course_history.html
+++ b/templates/course_history.html
@@ -16,9 +16,9 @@
                     <label for="number">Course No.</label>
                     <input type="text" id="number" name="number" autofocus><br><br>
                     <label for="start">Start Year</label>
-                    <input type="text" id="start" name="start" value=2016><br><br>
+                    <input type="text" id="start" name="start" value={{ start }}><br><br>
                     <label for="end">End Year</label>
-                    <input type="text" id="end" name="end" value=2021><br>
+                    <input type="text" id="end" name="end" value={{ end }}><br>
                     <p><input type="submit"></p>
                 </div>
             </form>
