Added link to Google Doc in shared Google Drive with Time Schedule Blocks image.

--- a/templates/index.html
+++ b/templates/index.html
@@ -28,6 +28,7 @@
                 <li><a href="/course_history/">Course History</a></li>
                 <li><a href="/joint_courses.html/">Joint Courses Information</a></li>
                 <li><a href="https://docs.google.com/spreadsheets/d/1dZSb9V977hEZJcDBGMMfYigskvfT-h7EOpa7lqlmkjg/edit?usp=sharing" target="_blank">Shared Controls Graduate Courses stylesheet</a></li>
+                <li><a href="https://docs.google.com/document/d/11dEay72H8IB47A3vjz6FT4SlmhxdPKl8fnSJzx0vxF0/edit" target="_blank">TS Schedule Blocks</a></li>
             </ul>
         </ul>
     </div>
