added links to 2020-2021 Academic Calendar, and priority registration pages for 2021

--- a/templates/index.html
+++ b/templates/index.html
@@ -30,6 +30,12 @@
                 <li><a href="https://docs.google.com/spreadsheets/d/1dZSb9V977hEZJcDBGMMfYigskvfT-h7EOpa7lqlmkjg/edit?usp=sharing" target="_blank">Shared Controls Graduate Courses stylesheet</a></li>
                 <li><a href="https://docs.google.com/document/d/11dEay72H8IB47A3vjz6FT4SlmhxdPKl8fnSJzx0vxF0/edit" target="_blank">TS Schedule Blocks</a></li>
             </ul>
+            <li class="listHeader"><h6>Helpful Links</h6></li>
+            <ul>
+                <li><a href="https://www.washington.edu/students/reg/2021cal.html#Q2">2020-2021 Academic Calendar</a></li>
+                <li><a href="https://registrar.washington.edu/priority-registration-dates-priorwi21/" target="_blank">Win 2021 Registration Priority</a></li>
+                <li><a href="https://registrar.washington.edu/priority-registration-dates-priorsp21/" target="_blank">Spr 2021 Registration Priority</a></li>
+            </ul>
         </ul>
     </div>
 </body>
