fixed the Degree Earned not showing. Type in the variable.

--- a/templates/student_info.html
+++ b/templates/student_info.html
@@ -30,7 +30,7 @@
                     <li>Major Dept.: {{ major }}</li>
                     <li>Degree: {{ degree }}</li>
                     <li>Degree Status: {{ degree_status }}</li>
-                    <li>Degree Earned: {{ degree_earnrd }}</li>
+                    <li>Degree Earned: {{ degree_earned }}</li>
                 </ul>
                 </div>
             </div>
