--- a/templates/index.html
+++ b/templates/index.html
@@ -24,7 +24,8 @@
             <li class="listHeader"><h6>Course Information</h6></li>
             <ul>
                 <li><a href="/course_info/">Single Course Information</a></li>
-                <li><a href="#">Current Time Schedule</a></li>
+                <li><a href="https://www.washington.edu/students/timeschd/WIN2021/ee.html">Current Time Schedule</a></li>
+                <li><a href="https://www.washington.edu/students/timeschd/SPR2021/ee.html">Upcoming Time Schedule</a></li>
                 <li><a href="/course_history/">Course History</a></li>
                 <li><a href="/joint_courses.html/">Joint Courses Information</a></li>
                 <li><a href="https://docs.google.com/spreadsheets/d/1dZSb9V977hEZJcDBGMMfYigskvfT-h7EOpa7lqlmkjg/edit?usp=sharing" target="_blank">Shared Controls Graduate Courses stylesheet</a></li>
@@ -33,7 +34,6 @@
             <li class="listHeader"><h6>Helpful Links</h6></li>
             <ul>
                 <li><a href="https://www.washington.edu/students/reg/2021cal.html#Q2">2020-2021 Academic Calendar</a></li>
-                <li><a href="https://registrar.washington.edu/priority-registration-dates-priorwi21/" target="_blank">Win 2021 Registration Priority</a></li>
                 <li><a href="https://registrar.washington.edu/priority-registration-dates-priorsp21/" target="_blank">Spr 2021 Registration Priority</a></li>
             </ul>
         </ul>
