adjusted column widths in layout

--- a/templates/student_info.html
+++ b/templates/student_info.html
@@ -19,7 +19,7 @@
             </div>
         </div>
         <div class="row">   
-            <div class="col">
+            <div class="col-3">
                 <div>
                 <h3>{{ sid }} - {{ name }}</h3>
                 <ul>
@@ -34,7 +34,7 @@
                 </ul>
                 </div>
             </div>
-            <div class="col">
+            <div class="col-5">
                 <p></p>
                 <h4>Current Schedule</h4>
                 <table class="table table-sm">
@@ -58,7 +58,7 @@
                     </body>
                 </table>
             </div>
-            <div class="col">
+            <div class="col-4">
                 <p></p>
                 <h4>Transcript</h4>
                 <table class="table table-sm">
