--- a/templates/student_info.html
+++ b/templates/student_info.html
@@ -37,7 +37,7 @@
             <div class="col-5">
                 <p></p>
                 <h4>Current Schedule</h4>
-                <table class="table table-sm">
+                <table class="table w-auto table-sm table-bordered">
                     <thead>
                         <tr>
                             <th>qtr-Yr</th>
@@ -61,7 +61,7 @@
             <div class="col-4">
                 <p></p>
                 <h4>Transcript</h4>
-                <table class="table table-sm">
+                <table class="table w-auto table-sm table-bordered">
                     <thead>
                         <tr>
                             <th>Tr-Qtr</th>
