--- a/templates/index.html
+++ b/templates/index.html
@@ -24,17 +24,29 @@
             <li class="listHeader"><h6>Course Information</h6></li>
             <ul>
                 <li><a href="/course_info/">Single Course Information</a></li>
-                <li><a href="https://www.washington.edu/students/timeschd/WIN2021/ee.html">Current Time Schedule</a></li>
-                <li><a href="https://www.washington.edu/students/timeschd/SPR2021/ee.html">Upcoming Time Schedule</a></li>
                 <li><a href="/course_history/">Course History</a></li>
                 <li><a href="/joint_courses.html/">Joint Courses Information</a></li>
                 <li><a href="https://docs.google.com/spreadsheets/d/1dZSb9V977hEZJcDBGMMfYigskvfT-h7EOpa7lqlmkjg/edit?usp=sharing" target="_blank">Shared Controls Graduate Courses stylesheet</a></li>
+                <li><a href="https://docs.google.com/spreadsheets/d/10jmuvcsF0VRj008C3CCY4ImOicnbI2nwteR5yql_jDE/edit?usp=sharing" target="_blank">Stephanie's Historical Enrollments Sheet</a></li>
+            </ul>
+            <li class="listHeader"><h6>Time Schedule</h6></li>
+            <ul>
+                <li><a href="https://www.washington.edu/students/timeschd/SPR2021/ee.html" target="_blank">Current Time Schedule</a></li>
+                <li><a href="https://www.washington.edu/students/timeschd/SUM2021/ee.html" target="_blank">Upcoming Time Schedule</a></li>
                 <li><a href="https://docs.google.com/document/d/11dEay72H8IB47A3vjz6FT4SlmhxdPKl8fnSJzx0vxF0/edit" target="_blank">TS Schedule Blocks</a></li>
+            </ul>
+            <li class="listHeader"><h6>Curriculum Managment</h6></li>
+            <ul>
+                <li><a href="https://uw.kuali.co/cor/main/#/apps/" target="_blank">CM System Sign In</a></li>
+                <li><a href="https://www.engr.washington.edu/mycoe/committees/edpol" target="_blank">CEP Schedule</a></li>
+                <li><a href="https://registrar.washington.edu/curriculum/application-deadlines/" target="_blank">Curriculm Office Course Proposal Deadlines</a></li>
+                <li><a href="https://registrar.washington.edu/curriculum/ugprogram-deadlines/" target="_blank">Curriculm Office Program Proposal Deadlines</a></li>
             </ul>
             <li class="listHeader"><h6>Helpful Links</h6></li>
             <ul>
-                <li><a href="https://www.washington.edu/students/reg/2021cal.html#Q2">2020-2021 Academic Calendar</a></li>
-                <li><a href="https://registrar.washington.edu/priority-registration-dates-priorsp21/" target="_blank">Spr 2021 Registration Priority</a></li>
+                <li><a href="https://www.washington.edu/students/reg/2021cal.html#Q2" target="_blank">2020-2021 Academic Calendar</a></li>
+                <li><a href="https://www.washington.edu/students/reg/2122cal.html#Q2" target="_blank">2021-2022 Academic Calendar</a></li>
+                <li><a href="https://registrar.washington.edu/priority-registration-dates-priorau21/" target="_blank">Aut 2021 Registration Priority</a></li>
             </ul>
         </ul>
     </div>
