--- a/templates/courses/course_info.html
+++ b/templates/courses/course_info.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "shared/base.html" %}
 {% block title %}Course Info{% endblock %}
 {% block body %}
     <div class="container-fluid">
