Small link change

--- a/templates/home/index.html
+++ b/templates/home/index.html
@@ -29,14 +29,15 @@
                 <li><a href="https://docs.google.com/spreadsheets/d/1dZSb9V977hEZJcDBGMMfYigskvfT-h7EOpa7lqlmkjg/edit?usp=sharing" target="_blank">Shared Controls Graduate Courses stylesheet</a></li>
                 <li><a href="https://docs.google.com/spreadsheets/d/10jmuvcsF0VRj008C3CCY4ImOicnbI2nwteR5yql_jDE/edit?usp=sharing" target="_blank">Stephanie's Historical Enrollments Sheet</a></li>
                 <li><a href="https://www.ece.uw.edu/wp-content/uploads/2020/12/ABET-Major-Concentration-Areas-Chart-12.10.2020.pdf" target="_blank">Concentrations Chart</a></li>
+                <li><a href="https://vannevar.ece.uw.edu/operations/advising/advising_tools/EE_Courses_Prereq_Tree.drawio.html" target="_blank">Prerequisite Flowchart</a></li>
             </ul>
             <li class="listHeader"><h6>Time Schedule</h6></li>
             <ul>
                 <li><a href="https://sdb.admin.uw.edu/sisdepttools/securid/TSconstrovr.aspx" target="_blank">Time Schedule Construction</a></li>
                 <li><a href="https://sdb.admin.uw.edu/depttools/securID/tsupdate.asp" target="_blank">Time Schedule Update</a></li>
                 <li><a href="https://registrar.washington.edu/classrooms/time-schedule-production-calendar-2021-2022/" target="_blank">2021-2022 Time Schedule Production Calendar</a></li>
-                <li><a href="https://www.washington.edu/students/timeschd/SPR2021/ee.html" target="_blank">Current Time Schedule</a></li>
-                <li><a href="https://www.washington.edu/students/timeschd/SUM2021/ee.html" target="_blank">Upcoming Time Schedule</a></li>
+                <li><a href="https://www.washington.edu/students/timeschd/AUT2021/ee.html" target="_blank">Current Time Schedule</a></li>
+                <li><a href="https://www.washington.edu/students/timeschd/WIN2022/ee.html" target="_blank">Upcoming Time Schedule</a></li>
                 <li><a href="https://docs.google.com/document/d/11dEay72H8IB47A3vjz6FT4SlmhxdPKl8fnSJzx0vxF0/edit" target="_blank">TS Schedule Blocks</a></li>
             </ul>
             <li class="listHeader"><h6>Curriculum Managment</h6></li>
