Added links for room_info, room_search and room_availability functions

--- a/templates/home/index.html
+++ b/templates/home/index.html
@@ -39,6 +39,9 @@
                 <li><a href="https://www.washington.edu/students/timeschd/AUT2021/ee.html" target="_blank">Current Time Schedule</a></li>
                 <li><a href="https://www.washington.edu/students/timeschd/WIN2022/ee.html" target="_blank">Upcoming Time Schedule</a></li>
                 <li><a href="https://docs.google.com/document/d/11dEay72H8IB47A3vjz6FT4SlmhxdPKl8fnSJzx0vxF0/edit" target="_blank">TS Schedule Blocks</a></li>
+                <li><a href="/room_info/" target="_blank">Room Detail</a></li>
+                <li><a href="/room_search/" target="_blank">Room Search</a></li>
+                <li><a href="/room_availability/" target="_blank">Room availability</a></li>
             </ul>
             <li class="listHeader"><h6>Curriculum Managment</h6></li>
             <ul>
