Added search for new room for a current sln

--- a/templates/home/index.html
+++ b/templates/home/index.html
@@ -41,6 +41,7 @@
                 <li><a href="https://docs.google.com/document/d/11dEay72H8IB47A3vjz6FT4SlmhxdPKl8fnSJzx0vxF0/edit" target="_blank">TS Schedule Blocks</a></li>
                 <li><a href="/room_info/" target="_blank">Room Detail</a></li>
                 <li><a href="/room_search/" target="_blank">Room Search</a></li>
+                <li><a href="/new_room_search/" target="_blank">New Room Search</a></li>
                 <li><a href="/room_availability/" target="_blank">Room availability</a></li>
             </ul>
             <li class="listHeader"><h6>Curriculum Managment</h6></li>
