Added search for room by day(s), capacity, start, end for a specific quarter.

--- a/templates/rooms/room_search.html
+++ b/templates/rooms/room_search.html
@@ -7,10 +7,20 @@
                 <div>
                     <form>
                         <p></p>
-                        <label for="min_cap"><h6>Min. Capacity: </h6></label><br>
-                        <input type="text" id="min_cap" name="min_cap" value="{{ min_cap }}" autofocus onfocus="this.select()"><br><br>
-                        <label for="max_cap"><h6>Max. Capacity: </h6></label><br>
-                        <input type="text" id="max_cap" name="max_cap" value="{{ max_cap }}"><br><br>
+                        <label for="min_cap"><h6>Min. Capacity: </h6></label>
+                        <input type="text" id="min_cap" name="min_cap" value="{{ min_cap }}" autofocus onfocus="this.select()"><br>
+                        <label for="max_cap"><h6>Max. Capacity: </h6></label>
+                        <input type="text" id="max_cap" name="max_cap" value="{{ max_cap }}"><br>
+                        <label for="year"><h6>Year: </h6></label>
+                        <input type="text" id="year" name="year" value="{{ year }}"><br>
+                        <label for="quarter"><h6>Qtr: </h6></label>
+                        <input type="text" id="quarter" name="quarter" value="{{ quarter }}"><br>
+                        <label for="days"><h6>Day(s): </h6></label>
+                        <input type="text" id="days" name="days" value="{{ days }}"><br>
+                        <label for="start_time"><h6>Start Time: </h6></label>
+                        <input type="text" id="start_time" name="start_time" value="{{ start_time }}"><br>
+                        <label for="end_time"><h6>End Time: </h6></label>
+                        <input type="text" id="end_time" name="end_time" value="{{ end_time }}"><br>
                         <p><input type="submit"></p>
                     </form>
                 </div>
