--- a/templates/faculty/faculty_crs_history.html
+++ b/templates/faculty/faculty_crs_history.html
@@ -1,13 +1,7 @@
-<html>
-<head>
-    <title>Faculty Course History</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-</head>
-<body>
+{% extends "shared/base.html" %}
+{% block title %}Student Info{% endblock %}
+{% block body %}
     <div class="container-fluid">
-        <div>
-            <p><a href="/">Menu</a></p>
-        </div>
         <div>
             <form>
                 <label for="sid">Last Name,First Initial</label>
@@ -58,5 +52,5 @@
             </table>
         </div>
     </div>
-</body>
+{% endblock %}}
 </html>
