--- a/templates/students/current_ee_undergrads.html
+++ b/templates/students/current_ee_undergrads.html
@@ -1,8 +1,6 @@
-<html>
-<head>
-    <title>Registered EE Undergrads</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-</head>
+{% extends "shared/base.html" %}
+{% block title %}ECE Advisor Home{% endblock %}
+{% block body %}
 <body>
     <div class="container-fluid">
         <div>
@@ -39,4 +37,4 @@
         </div>
     </div>
 </body>
-</html>
+{% endblock %}
